// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModal Component should contain brand: brand 1`] = `
<AboutModal
  appendTo={null}
  backgroundImageSrc=""
  brandImageAlt="Ipsum"
  brandImageSrc="logo-brand.svg"
  className="quipucords-about-modal"
  isOpen={true}
  noAboutModalBoxContentContainer={false}
  onClose={[Function]}
  productName={
    <img
      alt="Lorem ipsum"
      src="title-brand.svg"
    />
  }
  trademark="t(about-modal.copyright, {"year":"2022"})"
>
  <div
    aria-label="t(about-modal.copy-confirmation)"
    aria-live="polite"
    className="quipucords-about-modal-list"
    tabIndex={-1}
  >
    <TextContent>
      <TextList
        component="dl"
      >
        <TextListItem
          component="dt"
        >
          t(about-modal.ui-version)
        </TextListItem>
        <TextListItem
          component="dd"
        >
          0.0.0.0000000
        </TextListItem>
      </TextList>
    </TextContent>
  </div>
  <div
    className="quipucords-about-modal-copy-footer"
  >
    <Button
      className="quipucords-about-modal-copy-button"
      onClick={[Function]}
      title="t(about-modal.copy-button)"
      variant="tertiary"
    >
      <PasteIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </Button>
  </div>
</AboutModal>
`;

exports[`AboutModal Component should have a copy event that updates state: post copy event 1`] = `
{
  "copied": null,
  "timer": 13,
}
`;

exports[`AboutModal Component should have a copy event that updates state: pre copy event 1`] = `
{
  "copied": null,
  "timer": null,
}
`;

exports[`AboutModal Component should render a connected component with default props: connected 1`] = `<Connect(AboutModal) />`;

exports[`AboutModal Component should render a non-connected component: hidden modal 1`] = `
<AboutModal
  getStatus={[Function]}
  resetTimer={3000}
  serverVersion="0.0.0.0000000"
  show={false}
  t={[Function]}
  uiBrand={false}
  uiName="Quipucords"
  uiShortName="Quipucords"
  uiVersion="0.0.0.0000000"
  username="admin"
>
  <AboutModal
    appendTo={null}
    backgroundImageSrc=""
    brandImageAlt="Quipucords"
    brandImageSrc="logo.svg"
    className="quipucords-about-modal"
    isOpen={false}
    noAboutModalBoxContentContainer={false}
    onClose={[Function]}
    productName={
      <img
        alt="Quipucords"
        src="title.svg"
      />
    }
    trademark=""
  >
    <Portal
      containerInfo={<div />}
    >
      <AboutModalContainer
        aboutModalBoxContentId="pf-about-modal-content-0"
        aboutModalBoxHeaderId="pf-about-modal-title-0"
        backgroundImageSrc=""
        brandImageAlt="Quipucords"
        brandImageSrc="logo.svg"
        className="quipucords-about-modal"
        isOpen={false}
        noAboutModalBoxContentContainer={false}
        onClose={[Function]}
        productName={
          <img
            alt="Quipucords"
            src="title.svg"
          />
        }
        trademark=""
      />
    </Portal>
  </AboutModal>
</AboutModal>
`;
